force-app/main/default/objects/Deprivation__c/Deprivation__c.object-meta.xml
<CustomObject>
    <label>Deprivation</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Deprivation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deprivations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>