force-app/main/default/objects/Deprivation__c/fields/Child_deprived_of_parental_support__c.field-meta.xml
<CustomField>
    <fullName>Child_deprived_of_parental_support__c</fullName>
    <label>Child deprived of parental support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>