force-app/main/default/objects/Deprivation__c/fields/Date_of_parent_death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_parent_death__c</fullName>
    <label>Date of parent death</label>
    <type>Date</type>
</CustomField>