force-app/main/default/objects/Deprivation__c/fields/Incarceration_date__c.field-meta.xml
<CustomField>
    <fullName>Incarceration_date__c</fullName>
    <label>Incarceration date</label>
    <type>Date</type>
</CustomField>