force-app/main/default/objects/Deprivation__c/fields/Reason_for_absence__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_absence__c</fullName>
    <label>Reason for absence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desertion</fullName>
            </value>
            <value>
                <fullName>Incarceration</fullName>
            </value>
            <value>
                <fullName>Paternity not established</fullName>
            </value>
            <value>
                <fullName>Other Absences</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>